--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css">
     <link rel="stylesheet" href="style.css" >
+    <script class="u-script" type="text/javascript" src="animation.js" defer=""></script>
     <style></style>
 
     <title></title>
@@ -50,17 +52,18 @@
 
             </div>
 
-            <div id="foto" class="">
-                <div id="foto1">
-                    <img id="foto1int" src="img/foto1.jpeg" alt="">
+            <div id="foto" class="sub int">
+                <div id="foto1" class="sub2">
+                    <img class="" id="foto1int" src="img/foto1.jpeg" alt="">
                 </div>
 
-                <div id="foto2">
-                    <img id="foto2int" src="img/foto4.jpg" alt="">
+                <div id="foto2" class="sub3">
+                    <img class="" id="foto2int" src="img/foto4.jpg" alt="">
                 </div>
-
                 
             </div>
+
+
         </section>
     </section>
     
