--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div id="foto" class="sub int">
                 <div id="foto1" class="sub2">
-                    <img class="" id="foto1int" src="img/foto1.jpeg" alt="">
+                    <img class="sub3" id="foto1int" src="img/foto1.jpeg" alt="">
                 </div>
 
                 <div id="foto2" class="sub3">
