--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style></style>
 
     <title></title>
-    <link rel="shortcut icon" href= >
+    <link rel="shortcut icon" href= img/logo.png >
 
 <!--DEVICE viewport-->
     <meta name= "viewport" content= "width=device-width, initial-scale=1">
