--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
 
             <div id="foto" class="sub int">
-                <div id="foto1" class="sub2">
+                <a onclick="alert(txt)" href="jquery.html" id="regalo"><div id="foto1" class="sub2" >
                     <img class="sub3" id="foto1int" src="img/foto1.jpeg" alt="">
-                </div>
+                </div></a>
 
                 <div id="foto2" class="sub3">
                     <img class="" id="foto2int" src="img/foto4.jpg" alt="">
@@ -83,6 +83,7 @@
                 <h1 id="disp">Dj Aeromik è disponibile per eventi privati & eventi pubblici, per maggiori info contattaci ! 
                 <br>--Michele Friselle--</h1>
             </div>
+
             
 
 
