--- a/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
+++ b/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="Google Sheet.css">
-	<link rel="stylesheet" href="/style/style.css">
+	<link rel="stylesheet" href="../style/style.css">
 
 	<script>
 		// visibile 
