info agg in array

--- a/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
+++ b/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
@@ -75,7 +75,7 @@
 
 			<br>
 			<label style="color: white;" for="">Maggiorni info (visibile solo se cliccata la card dell' evento)</label> <br>
-			<textarea  name="info" placeholder="Maggiorni informaizoni"></textarea>
+			<textarea id="info" name="info" placeholder="Maggiorni informaizoni"></textarea>
 
 			<br><br>
 				<label style="color: white;" for="verifica">Inserisci la password:</label> <br>
@@ -94,7 +94,7 @@
 
 	<script>
 		// salva i dati per la prox volta
-		let ogg = ['data', 'titolo', 'citta', 'prov', 'via', 'link', 'org'];
+		let ogg = ['data', 'titolo', 'citta', 'prov', 'via', 'link', 'org', 'info'];
 
         function salvaDati() {
             for (let i = 0; i < ogg.length; i++) {
