--- a/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
+++ b/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
@@ -115,7 +115,7 @@
         }
 		
 		function resetDati() {
-			let defau = ''
+			let defau = '';
 			for (let i = 0; i < ogg.length; i++) {
 				var dati = localStorage.getItem(ogg[i]);
 				if (dati) {
