--- a/videos.html
+++ b/videos.html
@@ -6,14 +6,17 @@
 
     <meta name="Crated by" content="Priamix">
 
-    <link rel="stylesheet" href="style/style.css" >
     <link rel="stylesheet" href="style/video.css" >
-    <script class="u-script" type="text/javascript" src="index.js" defer=""></script>
+    <link rel="stylesheet" href="style/style.css" >
 
     <script type="text/javascript" src="script.js"></script>
 
 <!--font google-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- itim font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 
 <!--icon-->
     <link rel="shortcut icon" href="icon.png">
