--- a/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
+++ b/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google Sheet.html
@@ -60,7 +60,7 @@
 		<a onclick="toggleData()" id="opentxt"> ----------- Aggiungi EVENTI ----------- </a>
 		<form method="post" action="https://script.google.com/macros/s/AKfycbwPIJ8s4JgvFktuksO5yUFdeZEe6PR-d_IRVZJwysu3DuXiNzcoTtsWjOEuoGYCJo2L/exec" name="date-form">
 			<h4>Inserisci i dati della nuova data</h4>
-			<input type="date" name="data" id="data" placeholder="Data">
+			<input style="color: white;" type="date" name="data" id="data" placeholder="Data">
 			<input type="text" name="titolo" id="titolo" placeholder="Titolo">
 			<input type="text" name="citta" id="citta" placeholder="Città">
 			<input type="text" name="provincia" id="prov" placeholder="Provincia">
