--- a/social.html
+++ b/social.html
@@ -84,7 +84,7 @@
         <div class="social center">
             <div class="logo-cont"><a href="https://www.instagram.com/aeromik_official_/"><img src="social/instagram.svg" alt=""></a></div>
             <div class="logo-cont"><a href="https://www.youtube.com/@Aeromik"><img src="social/youtube.svg" alt=""></a></div>
-            <div class="logo-cont"><a href="tel:"><img src="social/whatsapp.svg" alt=""></a></div>
+            <div class="logo-cont"><a href="tel: +393513886327"><img src="social/whatsapp.svg" alt=""></a></div>
             <div class="logo-cont"><a href="https://www.tiktok.com/@dj_aeromik"><img src="social/tiktok.svg" alt=""></a></div>
         </div>
 
