--- a/social.html
+++ b/social.html
@@ -84,7 +84,7 @@
         <div class="social center">
             <div class="logo-cont"><a target="_blank" href="https://www.instagram.com/aeromik_official_/"><img src="social/instagram.svg" alt=""></a></div>
             <div class="logo-cont"><a target="_blank" href="https://www.youtube.com/@Aeromik"><img src="social/youtube.svg" alt=""></a></div>
-            <div class="logo-cont"><a target="_blank" href="https://wa.me/+393513886327?text=Ciao, vorrei sapere se riesci a suonare al mio evento\n\n__Preset__"><img src="social/whatsapp.svg" alt=""></a></div>
+            <div class="logo-cont"><a target="_blank" href="https://wa.me/+393513886327?text=Ciao, vorrei sapere se riesci a suonare al mio evento"><img src="social/whatsapp.svg" alt=""></a></div>
             <div class="logo-cont"><a target="_blank" href="https://www.tiktok.com/@dj_aeromik"><img src="social/tiktok.svg" alt=""></a></div>
         </div>
 
